# latticefoundry

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
crates/latticefoundry/: Cargo.toml
crates/latticefoundry/src/: lib.rs
crates/latticefoundry/src/codegen/: mod.rs
crates/latticefoundry/src/ir/: mod.rs
crates/latticefoundry/src/support/: mod.rs
crates/latticefoundry/src/verify/: mod.rs
crates/z3rs/: Cargo.toml
crates/z3rs/src/: lib.rs
docs/: design-tenets.md  ir-design.md
lf-cc/: Cargo.toml
lf-cc/src/: ast.rs  cstd.rs  headers.rs  layout.rs  lex.rs  lib.rs  lower.rs  main.rs  parse.rs  preprocess.rs  sema.rs  tests.rs
lf-cc/tests/: abi.rs  bitfields.rs  c23_lang.rs  differential.rs  embed.rs  headers.rs  preprocess.rs
src/: lib.rs
src/analysis/: cfg.rs  domain.rs  domfrontier.rs  manager.rs  mod.rs  solver.rs  soundness.rs  tests.rs
src/analysis/domains/: constants.rs  known_bits.rs  mod.rs  nullness.rs  ranges.rs
src/codegen/: interp.rs  isel.rs  mir.rs  mod.rs  regalloc.rs  target.rs  tests.rs  vtarget.rs
src/ir/: binary.rs  builder.rs  inst.rs  merge.rs  mod.rs  semantics.rs  tests.rs  text.rs  types.rs  value.rs
src/ir/semantics/: tests.rs
src/jit/: exec_mem.rs  mod.rs  tests.rs
src/link/: image.rs  mod.rs
src/mc/: dwarf.rs  elf.rs  emit.rs  lfo.rs  mod.rs  object.rs
src/pass/: mod.rs
src/support/: arena.rs  diagnostics.rs  hash.rs  mod.rs
src/transform/: dce.rs  egraph.rs  inline.rs  licm.rs  mem2reg.rs  mod.rs  pipeline.rs  sccp.rs  simplify_cfg.rs  superopt.rs  tests.rs
src/transform/superopt/: tests.rs
src/verify/: certificate.rs  cfg.rs  mod.rs  refinement.rs  structural.rs  tests.rs
src/verify/certificate/: tests.rs
src/verify/refinement/: tests.rs
