[package]
name = "latticefoundry"
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Mark Karpeles <admin@echelle.co.jp>"]
repository = "https://github.com/KarpelesLab/latticefoundry"
description = "A clean-room compiler construction framework in pure Rust"

# This is a single package, NOT a Cargo workspace: one library
# (`src/lib.rs`) plus several binaries auto-discovered from `src/bin/`
# (`lf`, `lf-ld`, `lf-as`, `lf-opt`, `lf-dis`).
[lib]
name = "latticefoundry"
path = "src/lib.rs"

# Dependencies are only our own focused, clean-room library crates. No foreign
# or third-party code. `z3rs` is our pure-Rust SMT solver; `puremp` is our
# arbitrary-precision numeric core (and z3rs's own dependency).
[dependencies]
z3rs = "0.0.4"
puremp = "0.2"

[lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
